# backend-tech-benchmark

./: .gitignore  Readme.md  docker-compose.yml  setup.sql  upload-file.csv
c#-dotnet/: Dockerfile  Readme.md  appsettings.json  c#-dotnet.csproj
c#-dotnet/Controllers/: BasicController.cs
c#-dotnet/Properties/: launchSettings.json
elixir_cowboy/: .gitignore  Dockerfile  README.md  mix.exs
elixir_cowboy/config/: config.exs
elixir_cowboy/lib/: database.ex  elixir_cowboy.ex  router.ex
go-gin/: Dockerfile  go.mod  main.go
java-spring/: Dockerfile  HELP.md  pom.xml
java-spring/src/main/java/com/masters/perftest/: PerftestApplication.java
java-spring/src/main/java/com/masters/perftest/api/: SimpleApiRestController.java
java-spring/src/main/resources/: application.properties
java-spring/src/test/java/com/masters/perftest/: PerftestApplicationTests.java
nodejs/: package-lock.json  package.json  server.js
nodejs-express/: Dockerfile  package.json  server.js
php-laravel/: .env  Dockerfile  README.md
php-laravel/app/Http/Controllers/: ApiController.php
php-laravel/routes/: api.php
python-fastapi/: Dockerfile  main.py  requirements.txt
rust/: Cargo.toml
rust-actixweb/src/: main.rs
rust-axum/: Cargo.toml  Dockerfile
rust-axum/.sqlx/: query-64664b4d63ebfe45960395af2679be1f2e8fbac2afdf4b4296ca0a508af4afe8.json
rust-axum/src/: main.rs
rust/src/: main.rs
