[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11", features = ["multipart"] }
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.7", features = [
    "postgres",
    "macros",
    "time",
    "bigdecimal",
    "runtime-tokio",
    "tls-rustls",
] }
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
