[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [
    "runtime-async-std",
    "tls-native-tls",
    "postgres",
] }

chrono = { version = "0.4.19", features = ["serde"] }
actix-web = "4.4.0"
actix-multipart = "0.6.1"
uuid = { version = "1.4.1", features = ["v4"] }
